# aspnetcore/tutorials/web-api-help-pages-using-swagger/samples/3.0/TodoApi.Swashbuckle/Program.cs
@@ -2,7 +2,7 @@
 using Microsoft.Extensions.Hosting;
 using MoviesWatched;
 
-namespace TodoApi
+namespace MoviesWatched
 {
     public class Program
     {
